--- a/src/components/poliza-form/poliza-form.css
+++ b/src/components/poliza-form/poliza-form.css
@@ -1,13 +1,5 @@
 @media all and (min-width: 480px) {
 
-    .form{
-        margin: auto;
-        padding: 0% 0%;     
-        align-items: center;
-        text-align: center;
-        width: 70%
-    }
-
     .selects{
         display: inline;
         margin: 0px 25px 0px 25px;
@@ -24,14 +16,6 @@
 
 }
 @media all and (max-width: 480px) {
-
-    .form{
-        margin: auto;
-        padding: 0% 0%;     
-        align-items: center;
-        text-align: center;
-        width: 100%
-    }
 
     .selects{
         display: inline;
